@@ -45,6 +45,10 @@ Bug fixes:
   as these registers can be destroyed by the dynamic loader
 - PR#5712: some documentation problems
 - PR#5719: ocamlyacc generates code that is not warning 33-compliant
+- PR#5727: emacs caml-mode indents shebang line in toplevel scripts
+- PR#5731: instruction scheduling forgot to account for destroyed registers
+- PR#5735: %apply and %revapply not first class citizens
+- PR#5738: first class module patterns not handled by ocamldep
 - PR#5742: missing bound checks in Array.sub
 - PR#5757: GC compaction bug (crash)
 - PR#5761: Incorrect bigarray custom block size
